Crash in DisplayLink::incrementFullSpeedRequestClientCount() https://bugs.webkit.org/show_bug.cgi?id=225683 <rdar://77716330>

Reviewed by Tim Horton.

Crash data suggest that in WebPageProxy::updateWheelEventActivityAfterProcessSwap()
the connection might be null. Protect against that an an unset DisplayID, as we do
in wheelEventHysteresisUpdated().

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::updateWheelEventActivityAfterProcessSwap):
* UIProcess/mac/DisplayLink.cpp:
(WebKit::DisplayLink::incrementFullSpeedRequestClientCount): Remove an extra semicolon.


Canonical link: https://commits.webkit.org/237609@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277351 268f45cc-cd09-0410-ab3c-d52691b4dbfc